--- a/routing.tex
+++ b/routing.tex
@@ -30,7 +30,7 @@ In awareness of the necessary routing for every module a bigger area was defined
 
 The technology rules are passed through by the ICFBInterface to Plantage. At least for the technology definitions of Austria Microsystems it is not necessary to convert these rules, as the same format is chosen. For other manufacturers a conversion might be necessary.
 
-Previously, the vias and routes were not considered at all. The main information which is needed to route are the dimension of the vias on the different layers and the width for the routes. Actually there is no real width for a route, but a minimal width, which a route must have. Usually this width is used for the connections. Also the dimensions for the via must be caculated, which can be done as described before. Also the generated routes and placed vias needed to be added to the output of Plantage, so that they can be shown in the GUI.
+Previously, the vias and routes were not considered at all. The main information which is needed to route are the dimension of the vias on the different layers and the width for the routes. Actually there is no real width for a route, but a minimal width, which a route must have. Usually this width is used for the connections. Also the dimensions for the via must be caculated \nref{eq:via_dimension} and the generated routes and placed vias needed to be added to the output of Plantage, so that they can be shown in the GUI.
 
 Beforehand, every pin consisted only of one rectangle, which is obviously not enough. This basic information was used to minimize the estimated net length for the placements. For real routing we need more complex possibilities to define pins, as for example the gate can be connected from both sides. Moreover it is not recommended to contact over the diffusion area. This will result in even more complex contact areas, as they could be split up in different parts. The definition of these areas is done by the user in the GUI and handed over to Plantage. The used format defines for every pin, which a module has, at least one contact area, but eventually a lot more. During the routing then the acutal contact area is selected based on a certain heuristic.
 
@@ -66,6 +66,7 @@ Another often used name for algorithm is Lee's algorithm. But whatever the name 
 The main difference from a line router to a maze router is the usage of lines as part of a route instead of points. This improves the memory usage and usually also avoids unnecessary bends. At the same time this modification causes the loss of the guarantee to find the shortest path \cite[p. 695]{kaufmann:electronic_design_automation}. The other big difference lies in the search algorithm itself, as the line router performs a depth-first search instead of a breadth-first search like the maze router. The basic idea behind this type of router is to try to reach the target, or at least one of its coordinates in the first step, through an as long as possible line. This line may hit an obstacle, which means that the direction must be changed. And in this way the router always goes as far as possible into a direction and changes the direction till he reaches the target.
 
 \subsection{Steiner Routing}
+\label{subsec:steiner_routing}
 The algorithms above only considered two-pin nets, but very often nets have more than two pins. For these cases a possible solution would be to consider only two pins at a time and connect the others sequentially to the previous ones. This can result in a lot worse results than the optimum \cite[p. 701]{kaufmann:electronic_design_automation}. A better approach is to use a Steiner-tree \cite[page 153]{springer:eda_analog_routing}.
 
 \subsection{Sophisticated Routing Algorithms}
@@ -94,6 +95,7 @@ It could be a very good idea to try to integrate the routing into the placer. Po
 Template based algorithms do not start from scratch, they already have a possible layout for a slightly different circuit or technology. Such a solution can be used in several cases and gives the layout designer nearly full control over the process. In my case I have to assume that there is no such template available and the intention of the whole set of tools would be that the user has to provide as less information as possible. This would really mean \textit{electronic design \textbf{automation}} and therefore should be the real target.
 
 \section{Implemented Routing Algorithms}
+\label{sec:implemented_algorithms}
 My first decision to make was to decide which algorithms I should implement. The more sophisticated solutions and all global and detailed approaches seemed a bit to complex to implement them clean in only a few weeks. So the real choice was to use something based on a maze or a line router. As the line routers seemed to be a good trade-off between complexity and performance I've chosen something based on them. In the end I've implemented three different routing algorithms: first of all a typical line expansion router. This solutions doesn't consider all constraints but it is able to create at least reasonable results. Afterwards this algorithm was extended to consider additional constraints. To improve the performance I also implemented a very special version of the line expansion router, which really only creates feasible, but not very useful routings. This router can be used for the pre-routing, where the results are not stored anyway.
 
 \subsection{Line Expansion Router}
@@ -161,7 +163,7 @@ To avoid collisions I take into account the preferred directions for every layer
 \subsubsection{Symmetric Routes}
 In manually created layouts an usual way to route symmetric elements is to create them optical symmetric. This optical symmetry gives the designer an easy way to create symmetry. But the really important part about routing symmetries is to match the parasitics. The resistance of the route is for sure matched for the symmetric routes through an optical symmetry, but the capacitive couplings are obeyed in most cases. Therefore I concentrated on the resistance. To also consider the capacities it would have been necessary to create all routes at the same time. Only with such an approach I can evaluate the capacitive parasitics, otherwise I never know what influence routes created afterwards will have. As I have chosen to create the routes one by one I can't consider the capacities for the symmetries.
 
-But before I go more into detail of the routing I want to explain the situation a bit more. Symmetries are caused by symmetry constraints, which can have, as already described earlier, single and pair modules. Single modules are quite useless for a symmetric routing. The only modules of interest are pair modules, no matter if they must be connected only together or also to another module.
+But before I go more into detail of the routing I want to explain the situation a bit more. Symmetries are caused by symmetry constraints, which can have, as already described earlier \nref{subsec:symmetry_constraint}, single and pair modules. Single modules are quite useless for a symmetric routing. The only modules of interest are pair modules, no matter if they must be connected only together or also to another module.
 
 In the routing I first extract all modules, which are symmetric and where both parts of the symmetry pair must be connected to the same net. Afterwards I connect these pairs together and the only possible start or end point for other routes is then the middle of the route between the pair. In this case the middle doesn't has to mean the same distance to both sides, but the same resistance to both modules. Therefore if for instance the route uses different layers from the modules to the middle, it is possible that the middle in terms of resistance can be different to the middle in terms of distance.
 
@@ -178,7 +180,7 @@ With guards \nref{fig:guard_ring} a designer can protect for example a certain s
 The major difference of guard rings to usual obstacles is that they are obstacles only for certain nets. Or if you look at it the other way round, a guard ring isn't an obstacle for the nets inside. This is necessary so that other routes do not use the space inside a guard ring, but the pins inside can still be connected. For example a MET1-guard will result in a normal obstacle, for all nets, on MET1. On all other routing layers there will be also obstacles, but only for nets which don't have pins inside the guard ring.
 
 \subsubsection{Multi-Pin Nets}
-To solve the problem of multi-pin nets it would be possible to use a Steiner-tree, as already described previously. But this approach wouldn't really be the easiest one to implement, so I've chosen a different solution. Basically, I connect at the beginnging the first two pins, where the order of the pins is random (actually they are sorted by there name alphabetically, but this was no intention and doesn't really matter). Afterwards I transform the whole new connection into additional possible targets. From this now bigger list of possible targets I select the closest one and connect the next pin to it. The result of this step is again transformed into additional targets for the next pin, and so on.
+To solve the problem of multi-pin nets it would be possible to use a Steiner-tree \nref{subsec:steiner_routing}, but this approach wouldn't really be the easiest one to implement. That is why I've chosen a different solution. Basically, I connect at the beginnging the first two pins, where the order of the pins is random (actually they are sorted by there name alphabetically, but this was no intention and doesn't really matter). Afterwards I transform the whole new connection into additional possible targets. From this now bigger list of possible targets I select the closest one and connect the next pin to it. The result of this step is again transformed into additional targets for the next pin, and so on.
 
 \subsubsection{Select a Route}
 Finally, if the start point is the same as the end point I have to calculate a feasible and complete route. I add the result to all the possible routes for this necessary connection. From these routes the first, quite simple, algorithm chooses only the best one. As this algorithm calculates the routes sequentially it has no information about for example capacitive couplings, therefore the \emph{best} possibility is chosen on the lowest resistance.
@@ -195,6 +197,6 @@ This is the point where the line expansion feasibility router comes into play. T
 \subsection{Extended Line Expansion Router}
 This extended version of the line expansion router is based on the simple version. So it is again a sequential approach with the same drawbacks and advantages as the previous versions. The main difference to it is how I select the routes. I create the routes actually in the same way like for the previous version. To improve the performance I make a pre-selection based on the resistance, which can be done easily, as the routes are already sorted by there resistance. For all the routes, which are then left, I calculate the total edge and area capacity that would turn out, if this route is added to the connections of the previously routed nets. I then combine these values together to the parasitic sum
 \[p = w_R \cdot R + w_{C_a} \cdot C_a + w_{C_e} \cdot C_e\]
-(where $w_i$ are the weights and $R$, $C_a$ and $C_e$ are the parasitics as defined in \ref{sec:electrical_rules}) on which the actual selection is based.
+(where $w_i$ are the weights and $R$, $C_a$ and $C_e$ are the parasitics as defined in \nref{sec:electrical_rules}) on which the actual selection is based.
 
 PICTURE MISSING OF ROUTED MILLER AMPLIFIER (LAYOUT)
