--- a/definitions.tex
+++ b/definitions.tex
@@ -106,13 +106,13 @@ Minimum widths are very central technology rules for the routing \nref{fig:techn
 
 The minimum enclosure rules describe minimum distances, which need to be met between shapes on different layers. In most cases a technology file contains only minimum enclosure rules, where one of the considered layers is a via layer. A via layer is during manufacturing an additional layer, in which the connections between the different layers are created. For the routing these rules result in the dimensions of the vias on the layers, which they connect.
 
-For some Via-Definitions, for example in the Hit-Kit of AMS, some enclosure rules are missing, at least in the technology file, but for the design rule check these rules are still existing. In these cases I have to assume that there is a certain default value for the minimum enclosure rules: 0.2$\mu$m to the layer below and 0.15$\mu$m to the layer above of a via layer. These values work at least for the technology definition of AMS, but they may differ in the definition of other manucfacturers.
+For some Via-Definitions, for example in the Hit-Kit of AMS, some enclosure rules are missing, at least in the technology file, but for the design rule check these rules are still existing. In these cases I have to assume that there is a certain default value for the minimum enclosure rules: 0.2$\mu$m to the layer below and 0.15$\mu$m to the layer above of a via layer. These values work at least for the technology definition of AMS, but they may differ in the definition of other manufacturers.
 
 Every via definition must have two minimum enclosure rules, one for every layer, which is connected through the via. Additionally, we need one minimum width rule for the via layer, which describes the width of the actual connection. From these three rules we then can calculate the dimensions of the via, which typically differ for the two layers \nref{fig:technology_rule_via_dimensions}.
 
 \begin{equation}
 \label{eq:via_dimension}
-{via dimension} = 2 \cdot \text{minimun enclosure} + \text{minimum via width}
+{via dimension} = 2 \cdot \text{minimum enclosure} + \text{minimum via width}
 \end{equation}
 
 \begin{figure}
@@ -137,7 +137,7 @@ In the tech-file from the manufacturer there are also electrical rules implied. 
 
 The first important value is the sheet resistance. This value defines the resistance of a layer and I used it to calculate the resistance of the routes. I don't need a really exact resistance, only something to measure and compare which takes into account the different layers. Therefore my personal definition for this algorithm of the sheet resistance will possibly be not the right one. In my point of view, in this case it is useful. For routes on one layer I just multiply the sheet resistance value with the length of the route, as I always use the minimum width for routes. A via doesn't really have a length, so I multiply the value with the area. Afterwards, these two results are  summed up for a whole connection and this represents then the resistance of this connection.
 
-The other two used values are the edge- and areacapacitance. The edgecapacitance describes the capacity between two neighbour routes on the same layer, the areacapacitance the capacity between two routes on the same position but on different layers. The total capacities ($C_e$ and $C_a$) are calculated from the length where two routes are neighbours ($l$), the distance between them ($d$) in case of an edge capacitor, the width they overlap ($w$) in case of an area capacity and the values from the technology file ($C'_e$ and $C'_a$).
+The other two used values are the edge- and area capacitance. The edge capacitance describes the capacity between two neighbour routes on the same layer, the area capacitance the capacity between two routes on the same position but on different layers. The total capacities ($C_e$ and $C_a$) are calculated from the length where two routes are neighbours ($l$), the distance between them ($d$) in case of an edge capacitor, the width they overlap ($w$) in case of an area capacity and the values from the technology file ($C'_e$ and $C'_a$).
 \[C_a = C'_a \cdot l \cdot w\]
 \[C_e = C'_e \cdot \frac{l}{d}\]
 
