--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,12 @@
 \chapter{Introduction}
 
-Currently a lot of new chips are designed and manufactured, every day. A lot of them are mainly digital, as our modern world becomes more and more digital. But some parts of even those digital chips are still analog, even if we do not want it. The problem is that the surroundings of a chip will always be analog, so at least some circuit elements must be viewed as analog. But the analog world still lacks the tools to fully automatize the steps from an idea to the actual layout of a chip for manufacturing. There are some tools for placing, and there are some implementations for routing algorithms available. But during the last few years a completely new approach for the placement was developed and now it is time to implement the next step towards a fully automatized analog layout tool into this software: routing.
+Currently a lot of new chips are designed and manufactured every single day. A lot of them are mainly digital, as our modern world becomes more and more digital as well. But some parts of these digital chips are still analog, even if it is not desired. The problem is that the surroundings of a chip will always be analog, so at least some circuit elements must also be viewed as analog. But the analog world still lacks the tools to fully automatize the steps from an idea to the actual layout of a chip for manufacturing. Some tools for placing and some implementations for routing algorithms are available. But during the last few years a completely new approach for the placement was developed and now it is time to implement the next step towards a fully automatized analog layout tool into this software: routing.
 
-The actually last missing step will be the integration of the already developed automatic circuit analysis. This tool could generate automatically the constraints from the schematic and therefore increase the degree of automation. For sure the user will still have to modify these suggested constraints, but the main work should be already done by the tool.
+The actually last missing step will be the integration of the already developed automatic circuit analysis. This tool could automatically generate the constraints from the schematic and therefore increases the degree of automation. The user will certainly still have to modify these suggested constraints but the main work should already be done by the tool.
 
 As we already have a fast and reliable placer, called Plantage, I have implemented the routing into this tool. The main results of this thesis are:
 \begin{itemize}
-\item I have implemented one line expansion router, which creates in most cases design rule clean routes\footnote{\label{foot:1}In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.} and considers symmetries.
+\item I have implemented a line expansion router, which creates, in most cases, design rule clean routes\footnote{\label{foot:1}In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance, in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.} and considers symmetries.
 \item Based on the previous router I have implemented an extension of the line expansion router, which tries to reduce the parasitics.
 \item As it isn't sure which one will fit best to the hierarchical placer it is easy to replace the router with a different implementation.
 \end{itemize}
